--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
 
     <section id="creditos">
         <h2>Creditos</h2>
-        <p>Creador de la Pagina:Espinosa González César</p>
-        <p>A mis compañeros un agradecimiento por todo: Fernanda Daniela Lorenzo Alba, Valeria León González, Jorge Angel Lorenzo Posada, Karen Monserrat León Molina
-        </p>
+        <p>Integrantes del projecto:Espinosa González César</p>
+        <p>Fernanda Daniela Lorenzo Alba</p>
+        <p>Valeria León González</p>
+        <p> Jorge Angel Lorenzo Posada</p>
+        <p>Karen Monserrat León Molina</p>
+     
 
         <nav>
             <ul>
