--- a/index.html
+++ b/index.html
@@ -82,19 +82,13 @@
         <div style="width: 40% "  class="centered-img" ><div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe title="OrganelosMemo" frameborder="0" width="1200" height="675" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/652b0573bba50d00105b1dd4" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
         <div style="width: 100%"  class="centered-img" ><div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe title="QUIZ TRIVIAL II" frameborder="0" width="1200" height="675" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/6526e31a8444700011a874ec" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
     </section>
-
-    
-
-
-
-
     <section id="creditos">
         <h2>Creditos</h2>
         <p>Integrantes del projecto:Espinosa González César</p>
-        <p>Fernanda Daniela Lorenzo Alba</p>
-        <p>Valeria León González</p>
-        <p> Jorge Angel Lorenzo Posada</p>
-        <p>Karen Monserrat León Molina</p>
+        <p>Lorenzo Alba Fernanda Daniela</p>
+        <p>León González Valeria</p>
+        <p>Lorenzo Posada Jorge Angel</p>
+        <p>León Molina Karen Monserrat</p>
      
 
         <nav>
